--- a/ansible/packages.yaml
+++ b/ansible/packages.yaml
@@ -17,7 +17,7 @@
   apt: name={{ item }} state=latest update_cache=yes
   with_items:
     - i3
-    - lightdm
+    - xdm
     - htop
     - iftop
     - iotop
@@ -25,5 +25,3 @@
     - git
     - zsh
     - vim-nox
-    - google-chrome-stable
-
